--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,3 +1,9 @@
-body {
-    background-color: #78C0A8
+html, body {
+    background-color: #78C0A8;
+    font-style: 'Roboto', sans-serif
+
+}
+
+a {
+  color: blue, green
 }
